# palpitaria

./: .env.example  .gitignore  Dockerfile  README.md  inject_haiti_scotland.py  inject_insights.py  migrate_supabase.py  process_teams.py  pyproject.toml  scrape_today.py  supabase_schema.sql
.cursor/skills/betfair/: SKILL.md  competition-data-strategies.md  context.md  copa-mundo-stalking.md
.cursor/skills/competitions/: BSA.md  BSB.md  CDB.md  WC.md
agents/: README.md
agents/palpitaria-diario/: agent.md  commands.md  hooks.md  memory.md  rules.md  skills.md
agents/palpitaria-diario/contracts/: executor.md  loop.md  planner.md  toolbox.md
scripts/: _reconcile_balance.py  audit_ia_historico.py  check_persistence.py  diag_today.py  ensure_brazil_competitions.py  import_betfair_csv.py  palpitaria_agente_diario.py  prepare_sticker_mascots.py  print_picks_today.py  reprove_bsb_today.py  revert_betfair_import.py  run_today_pipeline.py  setup_desktop_agent_launcher.ps1  sync_brazil.py  validate_ia_counters.py
src/palpitaria/: __init__.py  config.py  database.py  main.py  models.py
src/palpitaria/agents/: __init__.py  __main__.py  cli.py  contracts.py  planner.py  runner.py  validator.py
src/palpitaria/services/: ai_tracker.py  analytics.py  analyzer.py  auth.py  chat_service.py  club_profile_web.py  competitions.py  config_service.py  cost_service.py  explainer.py  football_data_client.py  foundation.py  ingest.py  knockout_climate.py  ledger.py  llm_client.py  llm_utils.py  match_context_utils.py  narrate.py  odds_ingest.py  odds_profile.py  odds_service.py  pipeline_trigger.py  prediction.py  profile_matches.py  scraper.py  skills_reader.py  strategy_card.py  team_names.py  wc_profile_web.py  wc_stalking_queries.py
tests/: conftest.py  test_agents_runtime.py  test_ai_tracker.py  test_analyzer.py  test_api.py  test_chat_collective.py  test_explainer.py  test_foundation.py  test_ingest.py  test_knockout_climate.py  test_ledger.py  test_prediction.py  test_profile_matches.py  test_strategy_card.py  test_team_names.py  test_wc_profile_web.py
(+28 files in other folders)
