[project]
name = "palpitaria"
version = "0.1.0"
description = "Palpitaria FC — Análise preditiva"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "openai>=1.60.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
palpitaria = "palpitaria.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palpitaria"]

[tool.hatch.build.targets.sdist]
include = ["src/palpitaria", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py312"
